Wait for all root web areas to have non-zero size in tests.

This should reduce flakyness in iframe tests. Re-enable flaky test.

Bug: 767032
Change-Id: Ied5d03a323bddac86389b0052777fc2a7422cb5b
Reviewed-on: https://chromium-review.googlesource.com/675763
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Katie Dektar <katydek@google.com>
Cr-Commit-Position: refs/heads/master@{#503253}
Former-commit-id: 831fa9721ed4f94c9073fe79135707e32d8a6fad